tests/baselines/reference/constructorOverloads8.errors.txt
tests/cases/compiler/constructorOverloads8.ts(2,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/constructorOverloads8.ts(3,5): error TS2392: Multiple constructor implementations are not allowed.


==== tests/cases/compiler/constructorOverloads8.ts (2 errors) ====
    class C {
        constructor(x) { }
        ~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(y, x) { } // illegal, 2 constructor implementations
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
    }
    
    class D {
        constructor(x: number);
        constructor(y: string); // legal, overload signatures for 1 implementation
        constructor(x) { }
    }
    
    interface I {
        new (x);
        new (x, y); // legal, overload signatures for (presumably) 1 implementation
    }